Fix wrong position of exif table

--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,6 @@ h2 {
 
 .exif-table {
     width: 500px;
-    display: block;
     margin: 0 auto;
 }
 
